apps/production/mealie/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: default
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
      app.kubernetes.io/instance: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
        app.kubernetes.io/instance: mealie
    spec:
      serviceAccountName: mealie
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - work-03
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: mealie-mealie
          image: "hkotel/mealie:v3.28.0"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9000
              name: http
          startupProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            periodSeconds: 10
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/app/about
              port: 9000
            periodSeconds: 10
          resources:
            requests:
              memory: "400Mi"
              cpu: "25m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          volumeMounts:
            - name: api-data
              mountPath: /app/data/
      volumes:
        - name: api-data
          persistentVolumeClaim:
            claimName: mealie-api-data-longhorn
