apps/production/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: default
  labels:
    app.kubernetes.io/instance: mealie
    app.kubernetes.io/name: mealie
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/instance: mealie
